JumpScript/tests/baselines/reference/Protected7.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected7.jump(2,13): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected7.jump (1 errors) ====
    class C {
      protected private m() { }
                ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }